<resources>
    <string name="app_name">mToilet</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_profile">My profile</string>
    <string name="menu_reset_password">Reset password</string>
    <string name="menu_logout">Logout</string>
    <string name="qr_code_scan">QR code scan</string>
    <string name="transactions_review">Transactions review</string>
    <string name="log_in">Log in</string>
    <string name="login_main_text">Please enter your account details below</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="log_in_button">Log in</string>
    <string name="i_don_t_have_an_account_login">I don`t have an account</string>
    <string name="register_log_in_main">Register/log in</string>
    <string name="main_text">Do you already have an mToilet account?</string>
    <string name="log_in_button_main">Log in</string>
    <string name="register_button_main">Register</string>
    <string name="my_profile_heading">My profile</string>
    <string name="username_my_profile">Username</string>
    <string name="password_my_profile">Password</string>
    <string name="gender_my_profile">Gender:</string>
    <string name="male_my_profile">Male</string>
    <string name="female_my_profile">Female</string>
    <string name="save_button_my_profile">Save</string>
    <string name="register_heading">Register</string>
    <string name="register_main_text">Please enter your account details below</string>
    <string name="username_register">Username</string>
    <string name="password_register">Password</string>
    <string name="confirm_password_register">Confirm password</string>
    <string name="gender_register">Gender:</string>
    <string name="male_register">Male</string>
    <string name="female_register">Female</string>
    <string name="create_my_account_button_register">Create my account</string>
    <string name="i_already_have_an_account_register">I already have an account</string>
    <string name="tutorial1_heading">What`s it for?</string>
    <string name="tutorial1_main_text">Use this app to get access to public toilets in seconds</string>
    <string name="next_button_tutorial1">Next</string>
    <string name="tutorial2_heading">Register for free</string>
    <string name="tutorial2_main_text">Create an mToilet account free of charge</string>
    <string name="back_button_tutorial2">Back</string>
    <string name="next_button_tutorial2">Next</string>
    <string name="tutorial3_heading">Add payment methods</string>
    <string name="tutorial3_main_text">Use your Revolut card to pay for public toilet in a second</string>
    <string name="back_button_tutorial3">Back</string>
    <string name="next_button_tutorial3">Next</string>
    <string name="tutorial4_heading">Scan the QR code</string>
    <string name="tutorial4_main_text">Contactless payment by scanning the QR code of the public toilet</string>
    <string name="back_button_tutorial4">Back</string>
    <string name="next_button_tutorial4">Next</string>
    <string name="welcome_heading">Welcome to mToilet</string>
    <string name="welcome_main_text">First, let us quickly show you around</string>
    <string name="ok_button_welcome">OK</string>
    <string name="skip_button_welcome">Skip</string>
    <string name="pay_qr_code_scan">Pay</string>
    <string name="qr_code_scan_heading">QR code scan</string>
    <string name="i_already_have_an_account_button">I already have an account</string>
    <string name="logout_button">Logout</string>
    <string name="my_profile_button">My profile</string>
    <string name="scan_code_qr_description">Scan code...</string>
    <string name="pay_btn_qr_scan">Pay</string>
    <string name="register_login_btn">Register</string>
    <string name="error_heading">Error occurred during transaction!</string>
    <string name="error_main_text">Please check your credit card balance and your network connection and try again.</string>
    <string name="order_id_info">Scan dse...</string>
    <string name="payment_successful_heading">Payment successful!</string>

</resources>