<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/register_heading"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainText"
        android:text="@string/register_main_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_below="@+id/register"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_below="@id/mainText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/username_register"
        android:gravity="center"
        android:padding="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:layout_below="@id/username"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/password_register"
        android:gravity="center"
        android:padding="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPassword"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:layout_below="@id/password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/confirm_password_register"
        android:gravity="center"
        android:padding="15dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gender_radio_group"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/confirmPassword"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender_radio_group_heading"
            android:text="@string/gender_register"
            android:textSize="20sp"
            android:gravity="center"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_male"
            android:text="@string/male_register" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_female"
            android:text="@string/female_register" />

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createMyAccount"
        android:layout_below="@id/gender_radio_group"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/create_my_account_button_register"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_already_have_an_account_register"
        android:layout_below="@id/createMyAccount"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:gravity="center"/>

</RelativeLayout>