<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my_profile_mainText"
        android:text="@string/my_profile_heading"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_below="@id/my_profile_mainText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/username_my_profile"
        android:gravity="center"
        android:padding="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:layout_below="@id/username"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/password_my_profile"
        android:gravity="center"
        android:padding="15dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gender_radio_group"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/password"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender_radio_group_heading"
            android:text="@string/gender_my_profile"
            android:textSize="20sp"
            android:gravity="center"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_male"
            android:text="@string/male_my_profile" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_female"
            android:text="@string/female_my_profile" />

    </RadioGroup>

    <Button
        android:background="@drawable/round_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createMyAccount"
        android:layout_below="@id/gender_radio_group"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/save_button_my_profile"/>

</RelativeLayout>