<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home2">

    <Button
        android:background="@drawable/round_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qr_scan_button"
        android:text="@string/qr_code_scan"
        android:layout_margin="50dp"/>

    <Button
        android:background="@drawable/round_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my_prof"
        android:text="@string/my_profile_button"
        android:layout_below="@+id/qr_scan_button"
        android:layout_margin="50dp"/>

    <Button
        android:background="@drawable/round_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:text="@string/logout_button"
        android:layout_below="@+id/my_prof"
        android:layout_margin="50dp"/>

</RelativeLayout>