<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_login_main"
        android:text="@string/register_log_in_main"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/do_you_have_account"
        android:text="@string/main_text"
        android:layout_below="@+id/register_login_main"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <Button
        android:background="@drawable/round_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/log_in"
        android:text="@string/log_in_button_main"
        android:layout_below="@+id/do_you_have_account"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <Button
        android:background="@drawable/round_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/register_button_main"
        android:textColor="@color/white"
        android:layout_below="@+id/log_in"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/purple_700"/>

</RelativeLayout>