<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tutorial4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headerTutorial4"
        android:text="@string/tutorial4_heading"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionTutorial4"
        android:text="@string/tutorial4_main_text"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="300dp"
        android:layout_below="@id/headerTutorial4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutTutorial4"
        android:orientation="horizontal"
        android:layout_below="@id/descriptionTutorial4"
        android:layout_marginTop="50dp"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/backTutorial4"
            android:text="@string/back_button_tutorial4"
            android:layout_weight="1"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextTutorial4"
            android:text="@string/next_button_tutorial4"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"/>



    </LinearLayout>

</RelativeLayout>