<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tutorial2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headerTutorial2"
        android:text="@string/tutorial2_heading"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/descriptionTutorial2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="220dp"
        android:gravity="center"
        android:text="@string/tutorial2_main_text"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/linearLayoutTutorial2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backTutorial2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/round_style"
            android:text="@string/back_button_tutorial2" />

        <Button
            android:id="@+id/nextTutorial2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/round_style"
            android:text="@string/next_button_tutorial2" />


    </LinearLayout>

</RelativeLayout>