<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/nunito_medium"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainText_login"
        android:text="@string/login_main_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="@font/nunito_medium"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:inputType="text"
        android:fontFamily="@font/nunito_medium"
        android:importantForAutofill="no"
        android:layout_below="@id/mainText_login"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/username_login"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:shadowColor="@color/white"
        android:backgroundTint="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:fontFamily="@font/nunito_medium"
        android:importantForAutofill="no"
        android:layout_below="@id/username"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/password_login"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:shadowColor="@color/white"
        android:backgroundTint="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_message"
        android:text=""
        android:fontFamily="@font/nunito_medium"
        android:layout_below="@id/password"
        android:gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:textColor="#FF0000"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_message"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_style"
        android:radius="50dp"
        android:text="@string/log_in_button" />

    <Button
        android:id="@+id/login_button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_style"
        android:radius="50dp"
        android:text="@string/register_login_btn" />



</RelativeLayout>