<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Tutorial3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headerTutorial3"
        android:text="@string/tutorial3_heading"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/descriptionTutorial3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="220dp"
        android:gravity="center"
        android:text="@string/tutorial3_main_text"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/linearLayoutTutorial3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backTutorial3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/round_style"
            android:text="@string/back_button_tutorial3"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/nextTutorial3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/round_style"
            android:text="@string/next_button_tutorial3"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>

</RelativeLayout>