<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Tutorial1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headerTutorial1"
        android:text="@string/tutorial1_heading"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/nunito_medium"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/toilet_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/headerTutorial1"
        android:layout_marginTop="60dp"
        android:background="@drawable/toilet_icon"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/descriptionTutorial1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="220dp"
        android:gravity="center"
        android:text="@string/tutorial1_main_text"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:fontFamily="@font/nunito_medium" />

    <Button
        android:id="@+id/nextTutorial1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/round_style"
        android:text="@string/next_button_tutorial1" />

</RelativeLayout>